[metadata]
name = force-gripper
version = 0.1.0
description = Force-controlled gripper utilities and drivers
author = Your Name
author_email = you@example.com
license = MIT
url = https://github.com/yourname/force_gripper
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pyserial
    numpy
    pyyaml

[options.packages.find]
include =
    force_gripper
    force_gripper.*
    force_gripper/

